any necessary information about installation or upgrade notes.


1.1 (prelim)
-------------

* :class:`~eulfedora.models.ReverseRelation` now includes an option for specifying
  a property to be used for sorting resulting items.  Can also be specified
  for reverse relations autogenerated by :class:`~eulfedora.models.Relation`.
* :mod:`unittest2` is now optional for testutils

1.0
---

* API methods have been overhauled to use `python-requests <http://python-requests.org>`_
  and `requests-toolbelt <http://toolbelt.readthedocs.org>`_

.. Note::

   API methods that previously returned a tuple of response content and the url
   now simply return the response object, which provides access to both content
   and url (among other information).  Server and DigitalObject classes should
   behave as before, but API methods are **not** backward-compatible.

.. Warning::

   The API upload method filesize is limited by the system maxint (2GB on 32-bit OSes)
   due to a `limitation with the Python len() method <http://bugs.python.org/issue12159>`_
   (possibly dependent on your Python implementation).  If you need large file
   upload support on a 32-bit OS, you should use an earlier version of eulfedora.

* New script **test-upload.py** for testing upload behavior on your platform;
  also provides an example of an upload callback method.
* bugfix: relationship methods on :class:`~eulfedora.models.DigitalObject` now
  recognize unicode as well as string pids as resources.

0.23
----

* Related objects accessed via :class:`~eulfedora.models.Relation` are now
  cached for efficiency, similar to the way datastreams are cached on
  :class:`~eulfedora.models.DigitalObject`.
* Methods :meth:`~eulfedora.models.DigitalObject.purge_relationship` and
  :meth:`~eulfedora.models.DigitalObject.modify_relationship` added to
  :class:`~eulfedora.models.DigitalObject`.
  Contributed by `Graham Hukill @ghukill <https://github.com/ghukill>`_.

0.22.2
------
