@@ -13,6 +13,8 @@ any necessary information about installation or upgrade notes.
   a property to be used for sorting resulting items.  Can also be specified
   for reverse relations autogenerated by :class:`~eulfedora.models.Relation`.
 * :mod:`unittest2` is now optional for testutils
+* Use python :mod:`json` for :mod:`eulfedora.indexdata.views` instead
+  of the simplejson that used to be included with Django
 
 1.0
 ---
